tests/ui/type/type-arg-out-of-scope.stderr
error[E0401]: can't use generic parameters from outer item
  --> $DIR/type-arg-out-of-scope.rs:2:29
   |
LL | fn foo<T>(x: T) {
   |        - type parameter from outer item
LL |     fn bar(f: Box<dyn FnMut(T) -> T>) { }
   |        ---                  ^ use of generic parameter from outer item
   |        |
   |        generic parameter used in this inner function
   |
   = note: nested items are independent from their parent item for everything except for privacy and name resolution
help: try introducing a local generic parameter here
   |
LL |     fn bar<T>(f: Box<dyn FnMut(T) -> T>) { }
   |           +++

error[E0401]: can't use generic parameters from outer item
  --> $DIR/type-arg-out-of-scope.rs:2:35
   |
LL | fn foo<T>(x: T) {
   |        - type parameter from outer item
LL |     fn bar(f: Box<dyn FnMut(T) -> T>) { }
   |        ---                        ^ use of generic parameter from outer item
   |        |
   |        generic parameter used in this inner function
   |
   = note: nested items are independent from their parent item for everything except for privacy and name resolution
help: try introducing a local generic parameter here
   |
LL |     fn bar<T>(f: Box<dyn FnMut(T) -> T>) { }
   |           +++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0401`.
